include/X11/Xlib.h

/* replace this with #include or typedef appropriate for your system */
typedef unsigned long wchar_t;
typedef char *XPointer;
/*
 * Information about the screen.  The contents of this structure are
 * implementation dependent.  A Screen should be treated as opaque
 * by application code.
 */

struct _XDisplay;		/* Forward declare before use for C++ */
typedef struct _XDisplay Display;
typedef void (*XConnectionWatchProc)(
    Display*			/* dpy */,
    XPointer			/* client_data */,
    int				/* fd */,
    Bool			/* opening */,	 /* open or close flag */
    XPointer*			/* watch_data */ /* open sets, close uses */
);
extern Status XInternalConnectionNumbers(
    Display*			/* dpy */,
    int**			/* fd_return */,
    int*			/* count_return */
);
extern void XProcessInternalConnection(
    Display*			/* dpy */,
    int				/* fd */
);
extern Status XAddConnectionWatch(
    Display*			/* dpy */,
    XConnectionWatchProc	/* callback */,
    XPointer			/* client_data */
);
extern void XRemoveConnectionWatch(
    Display*			/* dpy */,
    XConnectionWatchProc	/* callback */,
    XPointer			/* client_data */
);
extern void XSetAuthorization(
    char *			/* name */,
    int				/* namelen */,
    char *			/* data */,
    int				/* datalen */
);
extern int _Xmbtowc(
    wchar_t *			/* wstr */,
#ifdef ISC
extern int _Xwctomb(
    char *			/* str */,
    wchar_t			/* wc */
);