inc/X11/Xlib.bi


type XConnectionWatchProc as sub cdecl(byval as Display ptr, byval as XPointer, byval as integer, byval as integer, byval as XPointer ptr)

declare function XInternalConnectionNumbers cdecl alias "XInternalConnectionNumbers" (byval as Display ptr, byval as integer ptr ptr, byval as integer ptr) as integer
declare sub XProcessInternalConnection cdecl alias "XProcessInternalConnection" (byval as Display ptr, byval as integer)
declare function XAddConnectionWatch cdecl alias "XAddConnectionWatch" (byval as Display ptr, byval as XConnectionWatchProc, byval as XPointer) as integer
declare sub XRemoveConnectionWatch cdecl alias "XRemoveConnectionWatch" (byval as Display ptr, byval as XConnectionWatchProc, byval as XPointer)
declare sub XSetAuthorization cdecl alias "XSetAuthorization" (byval as zstring ptr, byval as integer, byval as zstring ptr, byval as integer)
declare function _Xmbtowc cdecl alias "_Xmbtowc" (byval as wchar_t ptr, byval as zstring ptr, byval as integer) as integer
declare function _Xwctomb cdecl alias "_Xwctomb" (byval as zstring ptr, byval as wchar_t) as integer

#endif
